k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-todo-app-service
spec:
  selector:
    app: spring-todo-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
