k8s_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-todo-app-ingress
spec:
  rules:
  - host: arch.homework
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: spring-todo-app-service
              port: 
                number: 9000
